@@ -1,3 +1,7 @@
+2016-10-22  Mark Ellis  <mark@mpellis.org.uk>
+
+	* add dbus properties for static device properties
+
 2016-10-10  Mark Ellis  <mark@mpellis.org.uk>
 
 	* consolidate udev device disconnect process into device manager,
